No select for areas that are more of a distraction. Fix scrollbar color. Fix hover element position

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-menu/launchbar-menu.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-menu/launchbar-menu.component.css
@@ -43,6 +43,10 @@
   background: #dde8f1;
 }
 
+.launch-menu-scroller::-webkit-scrollbar:enabled {
+    background: #ffffff55;
+}
+
 .refresh-plugins {
   float:right;  
 }
@@ -92,6 +96,7 @@
 }
 
 .launch-widget-popup {
+  user-select: none;    
   width: 335px;
   height: 350px;
   position: absolute;
