--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.css
@@ -12,6 +12,7 @@
 
 .clock {
   float: right;
+  user-select: none;
 }
 
 .two-row {
