--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/window/window.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/window/window.component.css
@@ -11,6 +11,7 @@
 */
 
 .caption.handle {
+  user-select: none;
   cursor: grab;
   cursor: -moz-grab;
   cursor: -webkit-grab;
